--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
         };
         // НАСТРОЙКИ РЕПОЗИТОРИЯ
         const CONFIG = {
-            username: 'ВАШ_ЛОГИН_GITHUB',
-            repo: 'НАЗВАНИЕ_РЕПОЗИТОРИЯ',
+            username: 'DailyWork-web',
+            repo: 'learn_courses_portal_rep',
             branch: 'main' 
         };
 
@@ -381,3 +381,4 @@
     </script>
 </body>
 </html>
+
