--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
     <script>
         // === КОНФИГУРАЦИЯ (ЗАПОЛНИ СВОЕ) ===
         const CONFIG = {
-            username: 'ТВОЙ_ЛОГИН', 
-            repo: 'ИМЯ_РЕПОЗИТОРИЯ',
+            username: 'DailyWork-web', 
+            repo: 'learn_courses_portal_rep',
             branch: 'main'
         };
 
@@ -340,3 +340,4 @@
     </script>
 </body>
 </html>
+
