--- a/index.html
+++ b/index.html
@@ -374,22 +374,21 @@
             }
         }
 
-       function parseInfo(text, folderName) {
-    // Если файла нет, возвращаем стандартные значения
-    if (!text) return { title: folderName, desc: 'Интерактивный контент', icon: '📁' };
+    function parseInfo(text, folderName) {
+        if (!text) return { title: folderName, desc: 'Интерактивный контент', icon: '📁' };
 
-    // Разбиваем текст на массив строк и убираем лишние пробелы по краям каждой строки
-    const lines = text.split('\n').map(line => line.trim()).filter(line => line.length > 0);
+        // Регулярное выражение /\r?\n/ делит текст и по \n, и по \r\n
+        const lines = text.split(/\r?\n/).map(line => line.trim()).filter(line => line.length > 0);
 
-    return {
-        // Первая строка — это заголовок (если пусто, берем имя папки)
-        title: lines[0] || folderName, 
-        // Вторая строка — описание (если пусто, ставим заглушку)
-        desc: lines[1] || 'Модуль обучения', 
-        // Иконку можно оставить в третьей строке или задать статично
-        icon: lines[2] || '📖' 
-    };
-}
+        return {
+            // Первая строка идет в заголовок
+            title: lines[0] ? lines[0] : folderName,
+            // Вторая строка (индекс 1) идет в описание
+            desc: lines[1] ? lines[1] : 'Модуль обучения',
+            // Третья строка — для иконки, если её нет — книга
+            icon: lines[2] ? lines[2] : '📖'
+        };
+    }
     </script>
 </body>
 </html>
